// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text/Title FEATURED type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #3498db;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#3498db"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title HUGE size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={24}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title LARGE size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title MEDIUM size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={16}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title NEGATIVE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #dd3311;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#dd3311"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title NEUTRAL type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#59636f"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title NORMAL type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title POSITIVE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2ecc71;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2ecc71"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title SMALL size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={14}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title SUBTLE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="rgba(0, 0, 0, 0.32)"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title WHITE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

<div
  style={
    Object {
      "background": "cadetblue",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="white"
  >
    Awesome Title
  </div>
</div>
`;

exports[`Storyshots Text/Title X_LARGE size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={20}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title centered 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title default - LARGE size, NORMAL type, left aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title extended style 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c0 {
  font-family: monospace;
  text-transform: uppercase;
}

<div
  className="c0 c1"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title justified 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: justify;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;

exports[`Storyshots Text/Title right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: right;
  font-weight: 600;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Title
</div>
`;
